--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "unocss-transformer-starter",
   "type": "module",
   "version": "0.0.0",
-  "packageManager": "pnpm@10.6.2",
+  "packageManager": "pnpm@10.12.3",
   "description": "A Unocss transformer starter template.",
   "license": "MIT",
   "homepage": "https://github.com/unpreset/unocss-transformer-starter#readme",
@@ -22,12 +22,11 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "import": "./dist/index.js"
     }
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "typesVersions": {
     "*": {
@@ -41,8 +40,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "unbuild",
-    "dev": "unbuild --stub",
+    "build": "tsdown",
+    "dev": "tsdown --watch",
     "prepublishOnly": "pnpm run build",
     "release": "bumpp --commit --push --tag && pnpm publish",
     "lint": "eslint .",
@@ -53,17 +52,17 @@
     "play": "npm -C playground run dev"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.8.1",
-    "@babel/types": "^7.26.10",
-    "@types/node": "^22.13.10",
-    "bumpp": "^10.0.3",
-    "eslint": "^9.22.0",
+    "@antfu/eslint-config": "^4.16.1",
+    "@babel/types": "^7.27.6",
+    "@types/node": "^24.0.4",
+    "bumpp": "^10.2.0",
+    "eslint": "^9.29.0",
     "esno": "^4.8.0",
     "magic-string": "^0.30.17",
-    "typescript": "^5.8.2",
-    "unbuild": "^3.5.0",
-    "unocss": "^66.0.0",
-    "vite": "^6.2.1",
-    "vitest": "^3.0.8"
+    "tsdown": "^0.12.8",
+    "typescript": "^5.8.3",
+    "unocss": "^66.3.1",
+    "vite": "^7.0.0",
+    "vitest": "^3.2.4"
   }
 }
